Add notes to category

--- a/firefly-iii-1.4.0.yaml
+++ b/firefly-iii-1.4.0.yaml
@@ -6411,6 +6411,10 @@ components:
           type: string
           format: string
           example: "Lunch"
+        notes:
+          type: string
+          format: string
+          example: "Some example notes"
         spent:
           type: array
           readOnly: true
