--- a/firefly-iii-1.4.0.yaml
+++ b/firefly-iii-1.4.0.yaml
@@ -792,6 +792,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AutocompleteObjectGroupArray'
+  /api/v1/autocomplete/piggy-banks:
+    get:
+      tags:
+        - autocomplete
+      operationId: getPiggiesAC
+      parameters:
+      - in: query
+        name: query
+        description: The autocomplete search query.
+        required: false
+        schema:
+          type: string
+          format: string
+        example: "str"
+      - in: query
+        name: limit
+        description: The autocomplete number of items returned
+        required: false
+        schema:
+          type: integer
+          format: int32
+        example: 10
+      summary: All piggy banks of the user returned in a basic auto-complete array.
+      responses:
+        '200':
+          description: A list of piggy banks with very basic information.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AutocompletePiggyArray'
   /api/v1/autocomplete/rules:
     get:
       tags:
@@ -5655,6 +5685,50 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/AutocompleteObjectGroup'
+    
+    AutocompletePiggy:
+      type: object
+      required:
+        - id
+        - name
+      properties:
+        id:
+          type: integer
+          format: int32
+          example: 2
+          readOnly: true
+        name:
+          type: string
+          format: string
+          example: "New couch"
+          description: Name of the piggy bank found by an auto-complete search.
+          readOnly: true
+        currency_id:
+          type: integer
+          format: int32
+          example: 12
+          description: Currency ID for this piggy bank.
+          readOnly: true
+        currency_code:
+          type: string
+          format: string
+          example: "EUR"
+          description: Currency code for this piggy bank.
+          readOnly: true
+        currency_symbol:
+          type: string
+          format: string
+          example: "$"
+          readOnly: true
+        currency_decimal_places:
+          type: integer
+          format: int32
+          example: 2
+          readOnly: true
+    AutocompletePiggyArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/AutocompletePiggy'
     
     AutocompleteRule:
       type: object
