--- a/firefly-iii-1.4.0.yaml
+++ b/firefly-iii-1.4.0.yaml
@@ -5760,7 +5760,7 @@ components:
       items:
         $ref: '#/components/schemas/AutocompletePiggy'
     
-    AutocompletePiggy:
+    AutocompletePiggyBalance:
       type: object
       required:
         - id
