--- a/firefly-iii-1.4.0.yaml
+++ b/firefly-iii-1.4.0.yaml
@@ -5199,7 +5199,7 @@ components:
         order:
           type: integer
           format: int32
-          example: false
+          example: 1
           description: "Order of the account"
         include_net_worth:
           type: boolean
