--- a/firefly-iii-1.5.0.yaml
+++ b/firefly-iii-1.5.0.yaml
@@ -40,8 +40,6 @@ tags:
 - name: currencies
   description: Manage all currencies in the system, disable and enable them or add
     new ones.
-- name: import
-  description: Manage and run imports.
 - name: links
   description: Manage links between transactions, and manage the type of links available.
 - name: piggy_banks
@@ -2933,118 +2931,6 @@ paths:
         schema:
           $ref: '#/components/schemas/DataDestroyObject'
   
-  /api/v1/import/list:
-    get:
-      description: List all imports
-      tags:
-        - import
-      operationId: listImport
-      parameters:
-      - in: query
-        name: page
-        description: Page number. The default pagination is per 50 items.
-        required: false
-        schema:
-          type: integer
-          example: 1
-      summary: List al imports
-      responses:
-        '200':
-          description: A list of import jobs.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ImportJobArray'
-  /api/v1/import/{key}:
-    get:
-      description: Show info on single import.
-      tags:
-      - import
-      summary: Show info on a single import
-      operationId: getImport
-      parameters:
-      - in: path
-        name: key
-        required: true
-        schema:
-          type: string
-          format: string
-          example: x2Akaijm2
-        description: The job key of an import job.
-      responses:
-        '200':
-          description: 'The requested import job'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ImportJobSingle'
-        '404':
-          description: Import job not found
-  /api/v1/import/{key}/transactions:
-    get:
-      tags:
-        - import
-      summary: List all transactions related to the import job. The correlation is made through the tag.
-      description: |
-        See summary
-      operationId: listTransactionByImport
-      parameters:
-      - in: path
-        name: key
-        required: true
-        schema:
-          type: string
-          format: string
-          example: abcde
-        description: The key of the import job
-      - in: query
-        name: page
-        description: Page number. The default pagination is 50.
-        required: false
-        schema:
-          type: integer
-          example: 1
-      - in: query
-        name: start
-        description: |
-          A date formatted YYYY-MM-DD. This is the start date of the selected range (inclusive).
-        required: false
-        schema:
-          type: string
-          format: date
-          example: 2018-09-17
-      - in: query
-        name: end
-        description: |
-          A date formatted YYYY-MM-DD. This is the end date of the selected range (inclusive).
-        required: false
-        schema:
-          type: string
-          format:  date
-          example: 2018-09-17
-      - in: query
-        name: type
-        description: Optional filter on the transaction type(s) returned.
-        required: false
-        schema:
-          $ref: '#/components/schemas/TransactionTypeFilter'
-      responses:
-        '200':
-          description: A list of transactions.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TransactionArray'
-  
-  # TODO
-  # upload import file.
-  # Download used config file
-  # set config value for provider
-  # list of config values for provider that need filling in
-  # read config value of provider
-  # set config value for job
-  # read config value for job
-  # list of config values for job that need filling in
   
   /api/v1/link_types:
     get:
@@ -6462,10 +6348,12 @@ components:
           type: string
           format: string
           example: "Bills"
+          required: true
         active:
           type: boolean
           format: boolean
           example: false
+          required: false
         order:
           type: integer
           format: int32
@@ -6476,6 +6364,7 @@ components:
           format: string
           example: reset
           description: "The type of auto-budget that Firefly III must create."
+          required: false
           enum:
             - reset
             - rollover
@@ -6497,7 +6386,7 @@ components:
         auto_budget_period:
           type: string
           format: string
-          example: "EUR"
+          example: "monthly"
           description: "Period for the auto budget"
           enum:
             - daily
