Update 1.5.0 docs https://github.com/firefly-iii/firefly-iii/issues/4411

--- a/firefly-iii-1.5.0.yaml
+++ b/firefly-iii-1.5.0.yaml
@@ -5317,9 +5317,9 @@ components:
           example: "accounts"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Account'
     
@@ -5476,9 +5476,9 @@ components:
           example: "attachments"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Attachment'
         links:
@@ -5505,9 +5505,9 @@ components:
         - currency_decimal_places
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5562,9 +5562,9 @@ components:
         - name
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5585,9 +5585,9 @@ components:
         - name
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5608,9 +5608,9 @@ components:
         - name
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5634,9 +5634,9 @@ components:
         - decimal_places
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5676,9 +5676,9 @@ components:
         - decimal_places
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5716,9 +5716,9 @@ components:
         - name
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         title:
           type: string
@@ -5745,9 +5745,9 @@ components:
         - name
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5789,9 +5789,9 @@ components:
         - name
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5839,9 +5839,9 @@ components:
         - name
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5862,9 +5862,9 @@ components:
         - name
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5886,9 +5886,9 @@ components:
         - tag
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5916,9 +5916,9 @@ components:
         - description
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5946,9 +5946,9 @@ components:
         - description
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -5975,9 +5975,9 @@ components:
         - type
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         name:
           type: string
@@ -6085,9 +6085,9 @@ components:
           example: "available_budgets"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/AvailableBudget'
     
@@ -6315,9 +6315,9 @@ components:
           example: "bills"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Bill'
     
@@ -6504,9 +6504,9 @@ components:
           example: "budget_limits"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/BudgetLimit'
     
@@ -6531,9 +6531,9 @@ components:
           example: "budgets"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Budget'
     
@@ -6665,9 +6665,9 @@ components:
           example: "categories"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Category'
     
@@ -6887,9 +6887,9 @@ components:
           example: "currencies"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Currency'
     
@@ -6931,9 +6931,9 @@ components:
           example: "currency_exchange_rates"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           type: object
           properties:
@@ -7020,9 +7020,9 @@ components:
           example: "import_jobs"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           type: object
           properties:
@@ -7164,9 +7164,9 @@ components:
           example: "link_types"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/LinkType'
         links:
@@ -7438,9 +7438,9 @@ components:
           example: "piggy_bank_eventss"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/PiggyBankEvent'
         links:
@@ -7460,9 +7460,9 @@ components:
           example: "piggy_banks"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/PiggyBank'
         links:
@@ -7531,9 +7531,9 @@ components:
           example: "preferences"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Preference'
     
@@ -7654,9 +7654,9 @@ components:
           example: "recurrences"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Recurrence'
         links:
@@ -7669,9 +7669,9 @@ components:
         - moment
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         created_at:
           type: string
@@ -7967,9 +7967,9 @@ components:
         - value
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         created_at:
           type: string
@@ -8109,9 +8109,9 @@ components:
           example: "rules_group"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/RuleGroup'
         links:
@@ -8139,9 +8139,9 @@ components:
           example: "rules"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Rule'
         links:
@@ -8162,9 +8162,9 @@ components:
         - value
       properties:
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           readOnly: true
         created_at:
           type: string
@@ -8306,9 +8306,9 @@ components:
           example: "expensive"
           description: The tag
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
           description: "ID of the tag"
         size:
           type: number
@@ -8385,9 +8385,9 @@ components:
           example: "tags"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/TagModel'
         links:
@@ -8536,9 +8536,9 @@ components:
           example: "transactionLinks"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/TransactionLink'
         links:
@@ -8566,9 +8566,9 @@ components:
           example: "transactions"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/Transaction'
         links:
@@ -9004,9 +9004,9 @@ components:
           example: "users"
           description: "Immutable value"
         id:
-          type: integer
-          format: int32
-          example: 2
+          type: string
+          format: string
+          example: "2"
         attributes:
           $ref: '#/components/schemas/User'
         links:
