--- a/firefly-iii-1.5.0.yaml
+++ b/firefly-iii-1.5.0.yaml
@@ -1234,7 +1234,7 @@ paths:
       summary: Insight into income, grouped by category.
       description: |
         This endpoint gives a summary of the income received by the user, grouped by (any) category.
-      operationId: insightExpenseCategory
+      operationId: insightIncomeCategory
       tags:
         - insight
       parameters:
@@ -1897,7 +1897,7 @@ paths:
       summary: Insight into income, grouped by tag.
       description: |
         This endpoint gives a summary of the income received by the user, grouped by (any) tag.
-      operationId: insightExpenseTag
+      operationId: insightIncomeTag
       tags:
         - insight
       parameters:
@@ -6495,7 +6495,7 @@ paths:
       summary: Store a new webhook
       description: |
           Creates a new webhook. The data required can be submitted as a JSON body or as a list of parameters. The webhook will be given a random secret.
-      operationId: storeUser
+      operationId: storeWebhook
       tags:
         - webhooks
       requestBody:
@@ -8621,6 +8621,9 @@ components:
             - type: string
             - type: object
             - type: array
+              items:
+                type: string
+                format: string
           example: "some-variable"
           description: "Content of the configuration variable. Is very dynamic and can be anything from booleans to arrays."
         editable:
@@ -8640,6 +8643,9 @@ components:
             - type: string
             - type: object
             - type: array
+              items:
+                type: string
+                format: string
           example: "Some-new-config var"
           description: Can be a number, a string, boolean or object. This depends on the actual configuration value.
     SystemInfo:
@@ -10545,6 +10551,9 @@ components:
             - type: string
             - type: object
             - type: array
+              items:
+                type: string
+                format: string
           example: "EUR"
           description: "The actual preference content."
     Preference:
@@ -10573,6 +10582,9 @@ components:
             - type: string
             - type: object
             - type: array
+              items:
+                type: string
+                format: string
           example: "EUR"
           description: "The actual preference content."
     PiggyBank:
